--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
       <![endif]-->
   
   <div class="main-header">
-    <figure class="logo">
+    <figure class="logo red-logo active-logo">
       <a href="#"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
+    </figure>
+    <figure class="logo white-logo">
+      <a href="#"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
     </figure>
     <!-- hambuger menu -->
     <div class="navbar-toggle">
@@ -46,7 +49,7 @@
 
   <main role="main" id="fullpage">
 
-    <div class="section main-landing-page" id="hello">
+    <div class="section main-landing-page" data-menuanchor="firstSection">
       <div class="container" >
         <h1>Salmon design </h1>
         <p>We combine creativity with fresh and modern content to engage your audience.</p>
@@ -54,31 +57,25 @@
       </div>
     </div> <!-- end of landing page -->
 
-    <div class="section interaction">
+    <div class="section design" data-menuanchor="secondSection">
       <div class="container">
         <h1>interactive design content</h1>
       </div>
     </div> <!-- end of abouts page -->    
 
-    <div class="section ux-ui">
+    <div class="section ux-ui" data-menuanchor="thirdSection">
       <div class="container">
         <h1>UX/UI content</h1>
       </div>
     </div> <!-- end of ux ui -->  
 
-    <div class="section prototype">
+    <div class="section prototype" data-menuanchor="fourthSection">
       <div class="container">
         <h1>prototype content</h1>
       </div>
-    </div> <!-- end of ux ui --> 
-
-    <div class="section graphic-design">
-      <div class="container">
-        <h1>graphic designer content</h1>
-      </div>
     </div> <!-- end of ux ui -->   
    
-    <div class="section photography">
+    <div class="section photography" data-menuanchor="sixthSection">
       <div class="container">
         <h1>photography content</h1>
       </div>
