--- a/index.html
+++ b/index.html
@@ -36,20 +36,19 @@
     </div>
     <!-- main navigation menu -->
     <nav class="main-nav-hide">
-      <ul>
-        <li><a href="#">home</a></li>
-        <li><a href="#">interactive designer</a></li>
-        <li><a href="#">UX/UI</a></li>
-        <li><a href="#">prototype</a></li>
-        <li><a href="#">graphic design</a></li>
-        <li><a href="#">photography</a></li>
+      <ul id="myMenu">
+        <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
+        <li data-menuanchor="design"><a href="#design">interactive designer</a></li>
+        <li data-menuanchor="ux-ui"><a href="#ux-ui">UX/UI</a></li>
+        <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
+        <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
     </nav>
   </div> <!-- end of main-header class -->
 
   <main role="main" id="fullpage">
 
-    <div class="section main-landing-page" data-menuanchor="firstSection">
+    <div class="section main-landing-page">
       <div class="container" >
         <h1>Salmon design </h1>
         <p>We combine creativity with fresh and modern content to engage your audience.</p>
@@ -57,25 +56,43 @@
       </div>
     </div> <!-- end of landing page -->
 
-    <div class="section design" data-menuanchor="secondSection">
+    <div class="section design">
       <div class="container">
-        <h1>interactive design content</h1>
+      <!-- ########## -->
+        <div class="logo-wrapper">
+          <svg id="bison-logo" viewBox="0 0 300 92.8">
+            <g>
+              <path class="st0" d="M2.9,3.3h32.6c8.1,0,13.1,1.8,16.6,5.2c2.1,2.1,3.6,5.1,3.6,9.1v0.2c0,6.9-4.2,11.2-10.4,13.3
+                c7.5,2.2,12.3,6.2,12.3,14.1v0.2c0,9.3-7.7,16.1-22.4,16.1H2.9V3.3z M30.3,26.2c4.2,0,6.2-1.4,6.2-4V22c0-2.6-2.1-4-6.2-4h-8.4
+                v8.2H30.3z M31.6,46.8c4.2,0,6.4-1.7,6.4-4.2v-0.2c0-2.5-2.1-4.2-6.3-4.2h-9.8v8.7H31.6z"/>
+              <path class="st0" d="M68.8,3.3h19.5v58.3H68.8V3.3z"/>
+              <path class="st0" d="M97.1,52.8l10.4-12.4c6.3,4.8,13.6,6.8,20.4,6.8c3.5,0,5-0.9,5-2.5v-0.2c0-1.7-1.8-2.6-8.1-3.8
+                c-13.1-2.7-24.6-6.4-24.6-18.7v-0.2c0-11.1,8.7-19.6,24.7-19.6c11.2,0,19.6,2.7,26.3,8l-9.5,13.1c-5.5-4-12.1-5.7-17.5-5.7
+                c-2.9,0-4.2,1-4.2,2.4v0.2c0,1.6,1.6,2.6,7.7,3.7c14.9,2.7,24.9,7.1,24.9,18.8v0.2c0,12.2-10.1,19.7-25.7,19.7
+                C115.1,62.7,104.5,59.3,97.1,52.8z"/>
+              <path class="st0" d="M162.6,32.6v-0.2c0-16.9,13.9-30.4,31.9-30.4c18,0,31.7,13.3,31.7,30.2v0.2c0,16.9-13.9,30.4-31.9,30.4
+                C176.4,62.8,162.6,49.5,162.6,32.6z M206.6,32.6v-0.2c0-6.9-4.7-13.1-12.2-13.1c-7.4,0-12.1,6.2-12.1,13v0.2
+                c0,6.9,4.7,13.1,12.2,13.1C201.9,45.6,206.6,39.4,206.6,32.6z"/>
+              <path class="st0" d="M238.3,3.3h18.2L277.3,29V3.3h19.3v58.3h-17.3l-21.6-26.9v26.9h-19.3V3.3z"/></g>
+          </svg>   
+        </div>
+      <!-- ########## -->
       </div>
     </div> <!-- end of abouts page -->    
 
-    <div class="section ux-ui" data-menuanchor="thirdSection">
+    <div class="section ux-ui">
       <div class="container">
         <h1>UX/UI content</h1>
       </div>
     </div> <!-- end of ux ui -->  
 
-    <div class="section prototype" data-menuanchor="fourthSection">
+    <div class="section prototype">
       <div class="container">
         <h1>prototype content</h1>
       </div>
     </div> <!-- end of ux ui -->   
    
-    <div class="section photography" data-menuanchor="sixthSection">
+    <div class="section photography">
       <div class="container">
         <h1>photography content</h1>
       </div>
@@ -85,8 +102,10 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
   <script src="js/vendor/scrolloverflow.js"></script>
   <script src="js/vendor/jquery.fullPage.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.3.1/vivus.min.js"></script>
 
   <script src="js/main.js"></script>
 
