develop ux-ui page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div> <!-- end of landing page -->
 
     <div class="section design">
-      <div class="container">
+      <div class="container text-center">
       <!-- ########## -->
         <div class="logo-wrapper">
           <svg id="bison-logo" viewBox="0 0 300 92.8">
@@ -82,9 +82,31 @@
 
     <div class="section ux-ui">
       <div class="container">
-        <h1>UX/UI content</h1>
+        <h1>UX/UI DESIGN</h1>
+        <p class="twelve">While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
+
+        <div class='three'>
+          <h5>Loading</h5>
+          <img src="img/loadingPage.png">
+        </div>
+
+        <div class='three'>
+          <h5>On board</h5>
+          <img src="img/onBoard.png">
+        </div>
+
+        <div class='three'>
+          <h5>Sign In</h5>
+          <img src="img/signIn.png">
+        </div>
+
+        <div class='three'>
+          <h5>Sign Up</h5>
+          <img src="img/signUp.png">
+        </div>
+
       </div>
-    </div> <!-- end of ux ui -->  
+    </div> <!-- end of ux ui section-->  
 
     <div class="section prototype">
       <div class="container">
