--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
         <h1>UX/UI DESIGN</h1>
         <p class="twelve">While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
 
-        <div class='three'>
+        <div class='three column'>
           <h5>Loading</h5>
           <img src="img/loadingPage.png">
         </div>
 
-        <div class='three'>
+        <div class='three column'>
           <h5>On board</h5>
           <img src="img/onBoard.png">
         </div>
 
-        <div class='three'>
+        <div class='three column'>
           <h5>Sign In</h5>
           <img src="img/signIn.png">
         </div>
 
-        <div class='three'>
+        <div class='three column'>
           <h5>Sign Up</h5>
           <img src="img/signUp.png">
         </div>
