add new hamburger menu

--- a/index.html
+++ b/index.html
@@ -23,17 +23,25 @@
   
   <div class="main-header">
     <figure class="logo red-logo active-logo">
-      <a href="#"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
+      <a href="#home"><img src="img/salmon-logo.svg" alt="salmon logo"></a>
     </figure>
     <figure class="logo white-logo">
-      <a href="#"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
+      <a href="#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
     </figure>
     <!-- hambuger menu -->
-    <div class="navbar-toggle">
+<!--     <div class="navbar-toggle">
       <div class="bar-1"></div>
       <div class="bar-2"></div>
       <div class="bar-3"></div>
-    </div>
+    </div> -->
+  <div class="navbar-toggle">
+      <svg version="1.1" id="menu" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 60 25" style="enable-background:new 0 0 60 25;" xml:space="preserve">
+        <rect x="-10" y="0" class="menu-bar" width="40" height="1"/>
+        <rect x="-10" y="10" class="menu-bar" width="40" height="1"/>
+        <rect x="-10" y="20" class="menu-bar" width="40" height="1"/>
+      </svg>
+  </div>
+
     <!-- main navigation menu -->
     <nav class="main-nav-hide">
       <ul id="myMenu">
@@ -85,22 +93,22 @@
         <h1>UX/UI DESIGN</h1>
         <p class="twelve">While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
 
-        <div class='three column'>
+        <div class='screen'>
           <h5>Loading</h5>
           <img src="img/loadingPage.png">
         </div>
 
-        <div class='three column'>
+        <div class='screen'>
           <h5>On board</h5>
           <img src="img/onBoard.png">
         </div>
 
-        <div class='three column'>
+        <div class='screen'>
           <h5>Sign In</h5>
           <img src="img/signIn.png">
         </div>
 
-        <div class='three column'>
+        <div class='screen'>
           <h5>Sign Up</h5>
           <img src="img/signUp.png">
         </div>
