fix hamburger menu

--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
       <a href="#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
     </figure>
     <!-- hambuger menu -->
-<!--     <div class="navbar-toggle">
-      <div class="bar-1"></div>
-      <div class="bar-2"></div>
-      <div class="bar-3"></div>
-    </div> -->
-  <div class="navbar-toggle">
+    <div class="navbar-toggle">
+      <div class="menu-container">
+        <div class="menu-bar"></div>
+        <div class="menu-bar"></div>
+        <div class="menu-bar"></div>
+      </div>
+    </div>
+<!--   <div class="navbar-toggle">
       <svg version="1.1" id="menu" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 60 25" style="enable-background:new 0 0 60 25;" xml:space="preserve">
         <rect x="-10" y="0" class="menu-bar" width="40" height="1"/>
         <rect x="-10" y="10" class="menu-bar" width="40" height="1"/>
         <rect x="-10" y="20" class="menu-bar" width="40" height="1"/>
       </svg>
-  </div>
+  </div> -->
 
     <!-- main navigation menu -->
     <nav class="main-nav-hide">
