adjust navigation menu

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <nav class="main-nav-hide">
       <ul id="myMenu">
         <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
-        <li data-menuanchor="design"><a href="#design">interactive designer</a></li>
+        <li data-menuanchor="design"><a href="#design">interaction design</a></li>
         <li data-menuanchor="ux-ui"><a href="#ux-ui">UX/UI</a></li>
-        <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
+        <li data-menuanchor="prototype"><a href="#prototype">prototyping</a></li>
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
     </nav>
