--- a/index.html
+++ b/index.html
@@ -36,20 +36,12 @@
         <div class="menu-bar"></div>
       </div>
     </div>
-<!--   <div class="navbar-toggle">
-      <svg version="1.1" id="menu" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 60 25" style="enable-background:new 0 0 60 25;" xml:space="preserve">
-        <rect x="-10" y="0" class="menu-bar" width="40" height="1"/>
-        <rect x="-10" y="10" class="menu-bar" width="40" height="1"/>
-        <rect x="-10" y="20" class="menu-bar" width="40" height="1"/>
-      </svg>
-  </div> -->
-
     <!-- main navigation menu -->
     <nav class="main-nav-hide">
       <ul id="myMenu">
         <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
         <li data-menuanchor="design"><a href="#design">interactive designer</a></li>
-        <li data-menuanchor="ux-ui"><a href="#ux-ui">UX/UI</a></li>
+        <li data-menuanchor="ux"><a href="#ux">UX/UI</a></li>
         <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
@@ -90,7 +82,8 @@
       </div>
     </div> <!-- end of abouts page -->    
 
-    <div class="section ux-ui">
+    <div class="section ux fp-auto-height">
+      <div class="placeholder-height"></div>
       <div class="container">
         <h1>UX/UI DESIGN</h1>
         <p class="twelve">While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
