--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav class="main-nav-hide">
       <ul id="myMenu">
         <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
-        <li data-menuanchor="design"><a href="#design">interactive designer</a></li>
+        <li data-menuanchor="interactive"><a href="#interactive">interactive</a></li>
         <li data-menuanchor="ux"><a href="#ux">UX/UI</a></li>
         <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
@@ -51,15 +51,15 @@
   <main role="main" id="fullpage">
 
     <div class="section main-landing-page">
-      <div class="container" >
+      <div class="container center-content" >
         <h1>Salmon design </h1>
         <p>We combine creativity with fresh and modern content to engage your audience.</p>
         <img src="img/salmon-red-logo.svg">
       </div>
     </div> <!-- end of landing page -->
 
-    <div class="section design">
-      <div class="container text-center">
+    <div class="section interactive">
+      <div class="container center-content">
       <!-- ########## -->
         <div class="logo-wrapper">
           <svg id="bison-logo" viewBox="0 0 300 92.8">
@@ -84,7 +84,7 @@
 
     <div class="section ux">
       <div class="placeholder-height"></div>
-      <div class="container">
+      <div class="container center-content">
         <h1>UX/UI DESIGN</h1>
         <p class="twelve">While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
         <div class='screen'>
