--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div class="section ux">
       <div class="placeholder-height"></div>
-      <div class="container center-content">
+      <div class="container">
         <h1>UX/UI DESIGN</h1>
         <p class="twelve">While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
         <div class='screen'>
