add horizontal slides

--- a/index.html
+++ b/index.html
@@ -108,8 +108,15 @@
     </div> <!-- end of ux ui section-->  
 
     <div class="section prototype">
-      <div class="container">
+      <div class="horizontal">
+        <div class="container">
         <h1>prototype content</h1>
+      </div>
+      </div>
+      <div class="horizontal">
+        <div class="container">
+        <h1>prototype Framer</h1>
+      </div>
       </div>
     </div> <!-- end of ux ui -->   
    
