--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         <p>We combine creativity with fresh and modern content to engage your audience.</p>
         <img src="img/salmon-red-logo.svg">
       </div>
+      <div class="pulse">
+        <a href="#interactive">
+          <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
+            <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
+            <circle cx="22" cy="22" r="8"></circle>
+            </g>
+          </svg>
+        </a>
+      </div> <!-- end of pulse -->
     </div> <!-- end of landing page -->
 
     <div class="section interactive">
