--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container center-content" >
         <h1>Salmon design </h1>
         <p>We combine creativity with fresh and modern content to engage your audience.</p>
-        <img src="img/salmon-red-logo.svg">
+        <img id="salmon-logo" src="img/salmon-red-logo.svg">
       </div>
       <div class="pulse">
         <a href="#interactive">
