--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <div class="section main-landing-page">
       <div class="container center-content" >
-        <h1>Salmon design </h1>
-        <p>We combine creativity with fresh and modern content to engage your audience.</p>
+<!--         <h1>Salmon design </h1>
+        <p>We combine creativity with fresh and modern content to engage your audience.</p> -->
         <img id="salmon-logo" src="img/salmon-red-logo.svg">
       </div>
       <div class="pulse">
@@ -78,6 +78,8 @@
 
     <div class="section interactive">
       <div class="container center-content">
+        <h1 id="interactive-heading">"Salmon design spring harvest got*em"</h1>
+        <p id="interactive-para">Salmon /ˈsæmən/ is the common name for several species of ray-finned fish in the family Salmonidae. Other fish in the same family include trout, char, grayling</p>
       <!-- ########## -->
         <div class="logo-wrapper">
           <svg id="bison-logo" viewBox="0 0 300 92.8">
