--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
       <div class="container center-content" >
 <!--         <h1>Salmon design </h1>
         <p>We combine creativity with fresh and modern content to engage your audience.</p> -->
-        <img id="salmon-logo" src="img/salmon-red-logo.svg">
+        <div id="salmon-fish">
+          <!-- <img id="salmon-logo" src="img/salmon-red-logo.svg"> -->
+          <img src="img/salmon-split.png">
+          <img id="salmon-fin" src="img/finn.png">
+        </div>
+        
       </div>
       <div class="pulse">
         <a href="#interactive">
