revise home page design

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
     </nav>
+    <span class="watermark-text">personal portfolio of <span class="rath">rath prak</span></span>
+    <div class="social-main">
+      <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+      <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
+      <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    </div>
   </div> <!-- end of main-header class -->
 
   <main role="main" id="fullpage">
@@ -72,11 +78,6 @@
             </g>
           </svg>
         </a>
-      </div>
-      <div class="social-main">
-        <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
       </div>
     </div> <!-- end of landing page -->
 
@@ -132,7 +133,8 @@
     </div> <!-- end of ux ui section-->  
 
     <div class="section prototype">
-      <div class="horizontal">
+      <h1>prototype content</h1>
+      <!-- <div class="horizontal">
         <div class="container">
         <h1>prototype content</h1>
       </div>
@@ -141,7 +143,7 @@
         <div class="container">
         <h1>prototype Framer</h1>
       </div>
-      </div>
+      </div> -->
     </div> <!-- end of ux ui -->   
    
     <div class="section photography">
