--- a/index.html
+++ b/index.html
@@ -108,33 +108,50 @@
     </div> <!-- end of abouts page -->    
 
     <div class="section ux">
-      <div class="placeholder-height"></div>
-      <div class="container">
-        <h1>UX/UI DESIGN</h1>
-        <p class="twelve">While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
-        <div class='screen'>
-          <h5>Loading</h5>
-          <img src="img/loadingPage.png">
+      <div class="horizontal ux-slide-01">
+        <div class="container">
+        <img src="img/onBoard-large.png">
+          <div class="ux-slide01-text">
+            <h1>USER INTERFACE</h1>
+            <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
+            </div>
+          <div class="ux-slide01-img">
+            
+          </div> 
         </div>
-        <div class='screen'>
-          <h5>On board</h5>
-          <img src="img/onBoard.png">
+      </div> <!-- end of slide 01 -->
+      <div class="horizontal ux-slide-02">
+        <div class="container">
+          <div class="placeholder-height"></div>
+          <div class="container">
+            <h1>UX/UI DESIGN</h1>
+            <p class="twelve">While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
+            <div class='screen'>
+            <h5>Loading</h5>
+            <img src="img/loadingPage.png">
+            </div>
+            <div class='screen'>
+            <h5>On board</h5>
+            <img src="img/onBoard.png">
+            </div>
+            <div class='screen'>
+            <h5>Sign In</h5>
+            <img src="img/signIn.png">
+            </div>
+            <div class='screen'>
+            <h5>Sign Up</h5>
+            <img src="img/signUp.png">
+            </div>
+            </div>
+          <div class="placeholder-height"></div>
         </div>
-        <div class='screen'>
-          <h5>Sign In</h5>
-          <img src="img/signIn.png">
-        </div>
-        <div class='screen'>
-          <h5>Sign Up</h5>
-          <img src="img/signUp.png">
-        </div>
-      </div>
-      <div class="placeholder-height"></div>
+      </div> <!-- end of slide 02 -->
+
     </div> <!-- end of ux ui section-->  
 
     <div class="section prototype">
       <h1>prototype content</h1>
-      <!-- <div class="horizontal">
+      <div class="horizontal">
         <div class="container">
         <h1>prototype content</h1>
       </div>
@@ -143,7 +160,7 @@
         <div class="container">
         <h1>prototype Framer</h1>
       </div>
-      </div> -->
+      </div>
     </div> <!-- end of ux ui -->   
    
     <div class="section photography">
