--- a/index.html
+++ b/index.html
@@ -107,19 +107,20 @@
       </div>
     </div> <!-- end of abouts page -->    
 
-    <div class="section ux">
-      <div class="horizontal ux-slide-01">
-        <div class="container">
-        <img src="img/onBoard-large.png">
-          <div class="ux-slide01-text">
-            <h1>USER INTERFACE</h1>
-            <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
+     <div class="section ux">
+
+        <div class="horizontal ux-slide-01">
+          <div class="wrapper-container">
+            <div class="ux-image flex">
+              <!-- <img src="img/onBoard-large.png"> -->
             </div>
-          <div class="ux-slide01-img">
-            
-          </div> 
-        </div>
+            <div class="ux-slide01-text flex">
+<!--               <h1>USER INTERFACE</h1>
+              <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p> -->
+            </div> 
+          </div>   
       </div> <!-- end of slide 01 -->
+
       <div class="horizontal ux-slide-02">
         <div class="container">
           <div class="placeholder-height"></div>
