add flexbox to UX page

--- a/index.html
+++ b/index.html
@@ -111,15 +111,16 @@
 
         <div class="horizontal ux-slide-01">
           <div class="wrapper-container">
-            <div class="ux-image flex">
-              <!-- <img src="img/onBoard-large.png"> -->
+            <div class="ux-image">
+              <img src="img/onBoard-large.png">
             </div>
-            <div class="ux-slide01-text flex">
-<!--               <h1>USER INTERFACE</h1>
-              <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p> -->
-            </div> 
+            <div class="ux-slide01-text">
+              <h1>USER INTERFACE</h1>
+              <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
+              <button class="ux-next-slide01-button">next</button>
+            </div> <!-- .ux-slide01-text -->
           </div>   
-      </div> <!-- end of slide 01 -->
+      </div> <!-- .horizontal .ux-slide-0 -->
 
       <div class="horizontal ux-slide-02">
         <div class="container">
