--- a/index.html
+++ b/index.html
@@ -109,45 +109,47 @@
 
      <div class="section ux">
 
-        <div class="horizontal ux-slide-01">
+        <section class="horizontal ux-slide-01">
           <div class="wrapper-container">
             <div class="ux-image">
               <img src="img/onBoard-large.png">
             </div>
-            <div class="ux-slide01-text">
+            <article class="ux-slide01-text">
               <h1>USER INTERFACE</h1>
-              <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
-              <button class="ux-next-slide01-button">next</button>
-            </div> <!-- .ux-slide01-text -->
+              <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX.</p>
+              <button class="btn ux-next-slide01-button">next</button>
+            </article> <!-- .ux-slide01-text -->
           </div>   
-      </div> <!-- .horizontal .ux-slide-0 -->
+      </section> <!-- .horizontal .ux-slide-0 -->
 
-      <div class="horizontal ux-slide-02">
-        <div class="container">
+      <section class="horizontal ux-slide-02">
           <div class="placeholder-height"></div>
           <div class="container">
-            <h1>UX/UI DESIGN</h1>
-            <p class="twelve">While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX, it is easily and often confused by the industries that employ UI Designers.</p>
-            <div class='screen'>
-            <h5>Loading</h5>
-            <img src="img/loadingPage.png">
+            <article class="ux-slide02-text">
+              <h1>USER INTERFACE</h1>
+              <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX.</p>
+            </article> <!-- .ux-slide02-text -->
+            <div class="screens-container">
+              <div class='screen'>
+                <h5>Loading</h5>
+                <img src="img/loadingPage.png">
+              </div>
+              <div class='screen'>
+                <h5>On board</h5>
+                <img src="img/onBoard.png">
+              </div>
+              <div class='screen'>
+                <h5>Sign In</h5>
+                <img src="img/signIn.png">
+              </div>
+              <div class='screen'>
+                <h5>Sign Up</h5>
+                <img src="img/signUp.png">
+              </div>
             </div>
-            <div class='screen'>
-            <h5>On board</h5>
-            <img src="img/onBoard.png">
-            </div>
-            <div class='screen'>
-            <h5>Sign In</h5>
-            <img src="img/signIn.png">
-            </div>
-            <div class='screen'>
-            <h5>Sign Up</h5>
-            <img src="img/signUp.png">
-            </div>
-            </div>
+          </div> <!-- .container -->
           <div class="placeholder-height"></div>
-        </div>
-      </div> <!-- end of slide 02 -->
+      </section> <!-- end of slide 02 -->
 
     </div> <!-- end of ux ui section-->  
 
