--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
       </section> <!-- .horizontal .ux-slide-0 -->
 
       <section class="horizontal ux-slide-02">
-          <div class="placeholder-height"></div>
-          <div class="container">
+          <div class="wrapper-container">
+            <div class="placeholder"></div>
             <article class="ux-slide02-text">
               <h1>USER INTERFACE</h1>
               <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX.</p>
@@ -147,8 +147,8 @@
                 <img src="img/signUp.png">
               </div>
             </div>
-          </div> <!-- .container -->
-          <div class="placeholder-height"></div>
+            <div class="placeholder"></div>
+          </div> <!-- .wrapper-container -->
       </section> <!-- end of slide 02 -->
 
     </div> <!-- end of ux ui section-->  
