add resume page

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
     <figure class="logo white-logo">
       <a href="#home"><img src="img/salmon-logo-white.svg" alt="salmon white logo"></a>
     </figure>
-    <!-- hambuger menu -->
+
     <div class="navbar-toggle">
       <div class="menu-container">
         <div class="menu-bar"></div>
         <div class="menu-bar"></div>
         <div class="menu-bar"></div>
       </div>
-    </div>
-    <!-- main navigation menu -->
+    </div> <!-- .navbar-toggle / hamburger menu -->
+
     <nav class="main-nav-hide">
       <ul id="myMenu">
         <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
@@ -46,14 +46,28 @@
         <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
-    </nav>
-    <span class="watermark-text">personal portfolio of <span class="rath">rath prak</span></span>
+    </nav> <!-- .main-nav-hide / hidden menu -->
+
+    <!-- <span class="watermark-text">personal portfolio of <span class="rath">rath prak</span></span> -->
+
+    <div class="resume-page resume-page-hide">
+      <div class="resume-content center-content ">
+        <h1>Welcome to my resume</h1>
+        <p>Im am an interactive designer with blah blah</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco.</p>
+        <img src="img/temp-graphic.jpg">
+        </div>
+    </div>
+
     <div class="social-main">
+      <span class="resume-btn">resume <span class="resume-tube-separator">|</span></span>
       <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     </div>
-  </div> <!-- end of main-header class -->
+  </div> <!-- .social-main -->
 
   <main role="main" id="fullpage">
 
