--- a/index.html
+++ b/index.html
@@ -50,19 +50,18 @@
 
     <!-- <span class="watermark-text">personal portfolio of <span class="rath">rath prak</span></span> -->
 
-    <div class="resume-page resume-page-hide">
-      <div class="resume-content center-content ">
-        <h1>Welcome to my resume</h1>
-        <p>Im am an interactive designer with blah blah</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco.</p>
+    <div class="about-page resume-page-hide">
+      <div class="about-content center-content ">
+        <h1>Come up with a better heading</h1>
+        <p>I'm a digital and UX designer from Welllington, New Zealand. I solve problems visually, and create various things for the web. Im also a passionate photographer. When Im not designing or deveoping I like debating about films and drinking beer</p>
+        <div class="about-skills"></div>
+
         <img src="img/temp-graphic.jpg">
         </div>
     </div>
 
     <div class="social-main">
-      <span class="resume-btn">resume <span class="resume-tube-separator">|</span></span>
+      <span class="about-btn">about <span class="about-tube-separator">|</span></span>
       <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
