add additional content to abouts page

--- a/index.html
+++ b/index.html
@@ -51,14 +51,44 @@
     <!-- <span class="watermark-text">personal portfolio of <span class="rath">rath prak</span></span> -->
 
     <div class="about-page resume-page-hide">
-      <div class="about-content center-content ">
+      <div class="about-content">
         <h1>Come up with a better heading</h1>
-        <p>I'm a digital and UX designer from Welllington, New Zealand. I solve problems visually, and create various things for the web. Im also a passionate photographer. When Im not designing or deveoping I like debating about films and drinking beer</p>
-        <div class="about-skills"></div>
+        <p>I'm a digital and UX designer from Welllington, New Zealand. I solve problems visually, and create various things for the web. Im also a passionate photographer. When Im not designing or deveoping I like debating about films and drinking beer. Talke about Lean UX, UI, product deisng and prototyping.</p>
 
-        <img src="img/temp-graphic.jpg">
-        </div>
-    </div>
+        <div class="about-wrapper">
+          <ul class="web-deveopment">
+            <h4>Web Developent</h4>
+            <li class="web-deveopment-item">HTML/CSS/SASS</li>
+            <li class="web-deveopment-item">Javascript/Jquery</li>
+            <li class="web-deveopment-item">Node</li>
+            <li class="web-deveopment-item">GSAP</li>
+            <li class="web-deveopment-item">Animation</li>
+            <li class="web-deveopment-item">Vivius</li>
+          </ul>
+
+          <ul class="design">
+            <h4>Design</h4>
+            <li class="web-deveopment-item">Illustrator</li>
+            <li class="web-deveopment-item">photoshop</li>
+            <li class="web-deveopment-item">Sketch</li>
+            <li class="web-deveopment-item">Framer</li>
+            <li class="web-deveopment-item">Pixate</li>
+            <li class="web-deveopment-item">Indesign</li>
+          </ul>
+
+          <ul class="tools">
+            <h4>Design</h4>
+            <li class="web-deveopment-item">Illustrator</li>
+            <li class="web-deveopment-item">photoshop</li>
+            <li class="web-deveopment-item">Sketch</li>
+            <li class="web-deveopment-item">Framer</li>
+            <li class="web-deveopment-item">Pixate</li>
+            <li class="web-deveopment-item">Indesign</li>
+          </ul>
+
+        </div> <!-- .about-skills -->
+      </div> <!-- .about-content .center-content -->
+    </div> <!-- .about-page .resume-page-hide -->
 
     <div class="social-main">
       <span class="about-btn">about <span class="about-tube-separator">|</span></span>
