--- a/index.html
+++ b/index.html
@@ -124,7 +124,13 @@
       </div>
     </div> <!-- end of landing page -->
 
+
+
     <div class="section interactive">
+
+        <div id="background">
+      <div id="container"></div> <!-- empty div -->
+    </div>
       <div class="container center-content">
         <h1 id="interactive-heading">"Salmon design spring harvest got*em"</h1>
         <p id="interactive-para">Salmon /ˈsæmən/ is the common name for several species of ray-finned fish in the family Salmonidae. Other fish in the same family include trout, char, grayling</p>
@@ -225,6 +231,9 @@
   <script src="js/vendor/scrolloverflow.js"></script>
   <script src="js/vendor/jquery.fullPage.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.3.1/vivus.min.js"></script>
+
+  <script src="js/data.js"></script>
+  <script src="js/vendor/bodymovin.js" type="text/javascript"></script>
 
   <script src="js/main.js"></script>
 
