--- a/index.html
+++ b/index.html
@@ -48,69 +48,25 @@
       </ul>
     </nav> <!-- .main-nav-hide / hidden menu -->
 
-    <!-- <span class="watermark-text">personal portfolio of <span class="rath">rath prak</span></span> -->
-
-    <div class="about-page resume-page-hide">
-      <div class="about-content">
-        <h1>Come up with a better heading</h1>
-        <p>I'm a digital and UX designer from Welllington, New Zealand. I solve problems visually, and create various things for the web. Im also a passionate photographer. When Im not designing or deveoping I like debating about films and drinking beer. Talke about Lean UX, UI, product deisng and prototyping.</p>
-
-        <div class="about-wrapper">
-          <ul class="web-deveopment">
-            <h4>Web Developent</h4>
-            <li class="web-deveopment-item">HTML/CSS/SASS</li>
-            <li class="web-deveopment-item">Javascript/Jquery</li>
-            <li class="web-deveopment-item">Node</li>
-            <li class="web-deveopment-item">GSAP</li>
-            <li class="web-deveopment-item">Animation</li>
-            <li class="web-deveopment-item">Vivius</li>
-          </ul>
-
-          <ul class="design">
-            <h4>Design</h4>
-            <li class="web-deveopment-item">Illustrator</li>
-            <li class="web-deveopment-item">photoshop</li>
-            <li class="web-deveopment-item">Sketch</li>
-            <li class="web-deveopment-item">Framer</li>
-            <li class="web-deveopment-item">Pixate</li>
-            <li class="web-deveopment-item">Indesign</li>
-          </ul>
-
-          <ul class="tools">
-            <h4>Design</h4>
-            <li class="web-deveopment-item">Illustrator</li>
-            <li class="web-deveopment-item">photoshop</li>
-            <li class="web-deveopment-item">Sketch</li>
-            <li class="web-deveopment-item">Framer</li>
-            <li class="web-deveopment-item">Pixate</li>
-            <li class="web-deveopment-item">Indesign</li>
-          </ul>
-
-        </div> <!-- .about-skills -->
-      </div> <!-- .about-content .center-content -->
-    </div> <!-- .about-page .resume-page-hide -->
-
     <div class="social-main">
       <span class="about-btn">about <span class="about-tube-separator">|</span></span>
       <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
     </div>
-  </div> <!-- .social-main -->
+  </div> <!-- .main-header & navigation -->
 
   <main role="main" id="fullpage">
 
     <div class="section main-landing-page">
+
       <div class="container center-content" >
-<!--         <h1>Salmon design </h1>
-        <p>We combine creativity with fresh and modern content to engage your audience.</p> -->
         <div id="salmon-fish">
-          <!-- <img id="salmon-logo" src="img/salmon-red-logo.svg"> -->
           <img src="img/salmon-split.png">
           <img id="salmon-fin" src="img/finn.png">
-        </div>
-        
+        </div>       
       </div>
+
       <div class="pulse">
         <a href="#interactive">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
@@ -122,6 +78,7 @@
           </svg>
         </a>
       </div>
+
     </div> <!-- end of landing page -->
 
     <div class="section interactive">
@@ -150,71 +107,61 @@
       </div>
     </div> <!-- end of abouts page -->    
 
-     <div class="section ux">
+    <div class="section ux">
 
-        <section class="horizontal ux-slide-01">
-          <div class="wrapper-container">
-            <div class="ux-image">
-              <img src="img/onBoard-large.png">
+      <div class="horizontal ux-slide-01">
+        <div class="wrapper-container">
+          <div class="ux-image">
+            <img src="img/onBoard-large.png">
+          </div>
+          <article class="ux-slide01-text">
+            <h1>USER INTERFACE</h1>
+            <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX.</p>
+            <button class="btn ux-next-slide01-button">next</button>
+          </article> 
+        </div>
+      </div> <!-- horizontal ux-slide-01 -->
+
+      <div class="horizontal ux-slide-02">
+        <div class="wrapper-container">
+          <div class="placeholder"></div>
+          <article class="ux-slide02-text">
+            <h1>USER INTERFACE</h1>
+            <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX.</p>
+          </article> <!-- .ux-slide02-text -->
+          <div class="screens-container">
+            <div class='screen'>
+              <h5>Loading</h5>
+              <img src="img/loadingPage.png">
             </div>
-            <article class="ux-slide01-text">
-              <h1>USER INTERFACE</h1>
-              <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX.</p>
-              <button class="btn ux-next-slide01-button">next</button>
-            </article> <!-- .ux-slide01-text -->
-          </div>   
-      </section> <!-- .horizontal .ux-slide-0 -->
-
-      <section class="horizontal ux-slide-02">
-          <div class="wrapper-container">
-            <div class="placeholder"></div>
-            <article class="ux-slide02-text">
-              <h1>USER INTERFACE</h1>
-              <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX.</p>
-            </article> <!-- .ux-slide02-text -->
-            <div class="screens-container">
-              <div class='screen'>
-                <h5>Loading</h5>
-                <img src="img/loadingPage.png">
-              </div>
-              <div class='screen'>
-                <h5>On board</h5>
-                <img src="img/onBoard.png">
-              </div>
-              <div class='screen'>
-                <h5>Sign In</h5>
-                <img src="img/signIn.png">
-              </div>
-              <div class='screen'>
-                <h5>Sign Up</h5>
-                <img src="img/signUp.png">
-              </div>
+            <div class='screen'>
+              <h5>On board</h5>
+              <img src="img/onBoard.png">
             </div>
-            <div class="placeholder"></div>
-          </div> <!-- .wrapper-container -->
-      </section> <!-- end of slide 02 -->
+            <div class='screen'>
+              <h5>Sign In</h5>
+              <img src="img/signIn.png">
+            </div>
+            <div class='screen'>
+              <h5>Sign Up</h5>
+              <img src="img/signUp.png">
+            </div>
+          </div>
+          <div class="placeholder"></div>
+        </div> 
+      </div> <!-- horizontal ux-slide-02 --> 
 
-    </div> <!-- end of ux ui section-->  
+    </div> <!-- .section ux -->
 
     <div class="section prototype">
       <h1>prototype content</h1>
-      <div class="horizontal">
-        <div class="container">
-        <h1>prototype content</h1>
-      </div>
-      </div>
-      <div class="horizontal">
-        <div class="container">
-        <h1>prototype Framer</h1>
-      </div>
-      </div>
-    </div> <!-- end of ux ui -->   
+    </div>  
    
     <div class="section photography">
       <div class="container">
         <h1>photography content</h1>
       </div>
-    </div> <!-- end of ux ui -->   
+    </div> 
 
   </main> <!-- end of main section -->
 
@@ -223,7 +170,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
   <!-- <script src="cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script> -->
   <script src="js/vendor/scrolloverflow.js"></script>
-  <script src="js/vendor/jquery.fullPage.js"></script>
+  <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.3.1/vivus.min.js"></script>
 
   <script src="js/main.js"></script>
