--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
-    <nav class="main-nav-hide">
+    <nav class="main-nav-hide" id="container">
       <ul id="myMenu">
         <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
         <li data-menuanchor="interactive"><a href="#interactive">interactive</a></li>
@@ -173,6 +173,8 @@
   <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.3.1/vivus.min.js"></script>
+  <!-- <script src="data/data.js"></script> -->
+  <script src="js/vendor/bodymovin.js"></script>
 
   <script src="js/main.js"></script>
 
