--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       </div>
     </div> <!-- .navbar-toggle / hamburger menu -->
 
-    <nav class="main-nav-hide" id="container">
+
+    <nav class="main-nav-hide">
+      <div id="transition-container"></div>
       <ul id="myMenu">
         <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
         <li data-menuanchor="interactive"><a href="#interactive">interactive</a></li>
@@ -46,7 +48,10 @@
         <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
+
     </nav> <!-- .main-nav-hide / hidden menu -->
+
+
 
     <div class="social-main">
       <span class="about-btn">about <span class="about-tube-separator">|</span></span>
