--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/jquery.fullPage.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/main.css">
 
@@ -48,13 +47,11 @@
         <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
       </ul>
-
     </nav> <!-- .main-nav-hide / hidden menu -->
 
 
 
     <div class="social-main">
-      <span class="about-btn">about <span class="about-tube-separator">|</span></span>
       <a target="_blank" class="contact-item" href="mailto:rathanap@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://github.com/rath-prak"><i class="fa fa-github" aria-hidden="true"></i></a>
       <a target="_blank" class="contact-item" href="https://nz.linkedin.com/in/rath-prak-97761a40"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
@@ -115,6 +112,30 @@
     <div class="section ux">
 
       <div class="horizontal ux-slide-01">
+        <div class="wrapper-container center-content">
+
+          <article>
+            <h3>prototyping + design</h3>
+            <p class="quote-text">“Even the darkest moments in our history can become however we want to remember them,”
+            </p>
+            <p>Take a break for a moment and get inspired. One of the biggest challenges of design work is that you have to shuttle back and forth between the realms of creative invention and market forces, like being an architect and a brick layer at the same time.</p>
+          </article>
+
+          <div class="p-symbol-container">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 220 260" style="enable-background:new 0 0 220 260;" xml:space="preserve">
+            <g>
+              <path d="M5,4.7h106.6c15.6,0,29.9,2,42.6,5.9c12.8,3.9,23.7,9.6,32.7,17.1c9,7.5,15.9,16.6,20.8,27.5c4.9,10.9,7.3,23.2,7.3,37v0.7
+                c0,14.7-2.7,27.6-8,38.7c-5.3,11.1-12.7,20.5-22.2,28.1c-9.5,7.6-20.8,13.3-33.9,17.1c-13.1,3.8-27.4,5.7-42.8,5.7H73.9v71.1H5V4.7
+                z M106.6,128.3c12.3,0,22-2.9,29-8.8c7-5.8,10.5-13.8,10.5-23.8v-0.7c0-10.7-3.5-18.9-10.5-24.5c-7-5.6-16.8-8.4-29.3-8.4H73.9
+                v66.1H106.6z"/>
+            </g>
+            </svg>
+          </div>
+
+        </div>
+      </div> <!-- horizontal ux-slide-01 -->
+
+      <div class="horizontal ux-slide-02">
         <div class="wrapper-container">
           <div class="ux-image">
             <img src="img/onBoard-large.png">
@@ -127,7 +148,7 @@
         </div>
       </div> <!-- horizontal ux-slide-01 -->
 
-      <div class="horizontal ux-slide-02">
+      <div class="horizontal ux-slide-03">
         <div class="wrapper-container">
           <div class="placeholder"></div>
           <article class="ux-slide02-text">
@@ -176,6 +197,7 @@
   <!-- <script src="cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script> -->
   <script src="js/vendor/scrolloverflow.js"></script>
   <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
+  <script src="js/vendor/fullpage.scrollHorizontally.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.3.1/vivus.min.js"></script>
   <!-- <script src="data/data.js"></script> -->
