--- a/index.html
+++ b/index.html
@@ -112,16 +112,9 @@
     <div class="section ux">
 
       <div class="horizontal ux-slide-01">
-        <div class="wrapper-container center-content">
+        <div class="wrapper-container">
 
-          <article>
-            <h3>prototyping + design</h3>
-            <p class="quote-text">“Even the darkest <br> moments in our history can become however we want to remember them,”
-            </p>
-            <p>Take a break for a moment One of the biggest challenges of design work is that you have to shuttle back and forth between the realms.</p>
-          </article>
-
-          <div class="p-symbol-container center-content">
+        <div class="p-symbol-container">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 220 260" style="enable-background:new 0 0 220 260;" xml:space="preserve">
             <g>
               <path d="M5,4.7h106.6c15.6,0,29.9,2,42.6,5.9c12.8,3.9,23.7,9.6,32.7,17.1c9,7.5,15.9,16.6,20.8,27.5c4.9,10.9,7.3,23.2,7.3,37v0.7
@@ -131,6 +124,13 @@
             </g>
             </svg>
           </div>
+
+          <section>
+            <h3 class="heading-prototype">prototyping + design</h3>
+            <p class="quote-text">“Even the darkest <br> moments in our history can get got”
+            </p>
+            <p class="description-prototype">Take a break for a moment One of the biggest <br>  challenges of design work is.</p>
+          </section>
 
         </div>
       </div> <!-- horizontal ux-slide-01 -->
