fix text animation for UX page

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
           </div>
 
           <section>
-            <h3 class="heading-prototype">prototyping + design</h3>
-            <p class="quote-text">“Even the darkest <br> moments in our history can get got”
+            <h3 class="ux-prototype">prototyping + design</h3>
+            <p class="quote-text ux-prototype">“Even the darkest <br> moments in our history can get got”
             </p>
-            <p class="description-prototype">Take a break for a moment One of the biggest <br>  challenges of design work is.</p>
+            <p class="ux-prototype">Take a break for a moment One of the biggest <br>  challenges of design work is.</p>
           </section>
 
         </div>
