--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
         <div class="wrapper-container">
 
         <div class="p-symbol-container" id="grunt-container">
-            <!-- <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 220 260" style="enable-background:new 0 0 220 260;" xml:space="preserve">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 220 260" style="enable-background:new 0 0 220 260;" xml:space="preserve">
             <g>
               <path d="M5,4.7h106.6c15.6,0,29.9,2,42.6,5.9c12.8,3.9,23.7,9.6,32.7,17.1c9,7.5,15.9,16.6,20.8,27.5c4.9,10.9,7.3,23.2,7.3,37v0.7
                 c0,14.7-2.7,27.6-8,38.7c-5.3,11.1-12.7,20.5-22.2,28.1c-9.5,7.6-20.8,13.3-33.9,17.1c-13.1,3.8-27.4,5.7-42.8,5.7H73.9v71.1H5V4.7
                 z M106.6,128.3c12.3,0,22-2.9,29-8.8c7-5.8,10.5-13.8,10.5-23.8v-0.7c0-10.7-3.5-18.9-10.5-24.5c-7-5.6-16.8-8.4-29.3-8.4H73.9
                 v66.1H106.6z"/>
             </g>
-            </svg> -->
+            </svg>
           </div>
 
           <section>
