mobile scrolling problems

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       </div> <!-- horizontal ux-slide-01 -->
 
       <div class="horizontal ux-slide-03">
-        <div class="wrapper-container">
+        <div class="wrapper-container fp-auto-height-responsive">
           <div class="placeholder"></div>
           <article class="ux-slide02-text">
             <h1>USER INTERFACE</h1>
@@ -194,9 +194,9 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
   <!-- <script src="cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script> -->
-  <script src="js/vendor/scrolloverflow.js"></script>
   <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
   <script src="js/vendor/fullpage.scrollHorizontally.min.js"></script>
+  <script src="js/vendor/scrolloverflow.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vivus/0.3.1/vivus.min.js"></script>
   <!-- <script src="data/data.js"></script> -->
