add content for about me page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div id="transition-container"></div>
       <ul id="myMenu">
         <li data-menuanchor="home" class="active"><a href="#home">home</a></li>
-        <li data-menuanchor="interactive"><a href="#interactive">interactive</a></li>
+        <li data-menuanchor="about-me"><a href="#about-me">about me</a></li>
         <li data-menuanchor="ux"><a href="#ux">UX/UI</a></li>
         <li data-menuanchor="prototype"><a href="#prototype">prototype</a></li>
         <li data-menuanchor="photography"><a href="#photography">photography</a></li>
@@ -70,7 +70,7 @@
       </div>
 
       <div class="pulse">
-        <a href="#interactive">
+        <a href="#about-me">
           <svg class="pulse-button" height="65" viewBox="0 0 65 65" width="65" xmlns="http://www.w3.org/2000/svg">
             <g fill-rule="evenodd" fill="none" stroke-width="2" transform="translate(1 1)">
             <circle cx="22" cy="22" r="6" stroke-opacity="0"></circle>
@@ -83,47 +83,41 @@
 
     </div> <!-- end of landing page -->
 
-    <div class="section interactive">
-      <div class="container center-content">
-        <h1 id="interactive-heading">"Salmon design spring harvest got*em"</h1>
-        <p id="interactive-para">Salmon /ˈsæmən/ is the common name for several species of ray-finned fish in the family Salmonidae. Other fish in the same family include trout, char, grayling</p>
-      <!-- ########## -->
-        <div class="logo-wrapper">
-          <svg id="bison-logo" viewBox="0 0 300 92.8">
-            <g>
-              <path class="st0" d="M2.9,3.3h32.6c8.1,0,13.1,1.8,16.6,5.2c2.1,2.1,3.6,5.1,3.6,9.1v0.2c0,6.9-4.2,11.2-10.4,13.3
-                c7.5,2.2,12.3,6.2,12.3,14.1v0.2c0,9.3-7.7,16.1-22.4,16.1H2.9V3.3z M30.3,26.2c4.2,0,6.2-1.4,6.2-4V22c0-2.6-2.1-4-6.2-4h-8.4
-                v8.2H30.3z M31.6,46.8c4.2,0,6.4-1.7,6.4-4.2v-0.2c0-2.5-2.1-4.2-6.3-4.2h-9.8v8.7H31.6z"/>
-              <path class="st0" d="M68.8,3.3h19.5v58.3H68.8V3.3z"/>
-              <path class="st0" d="M97.1,52.8l10.4-12.4c6.3,4.8,13.6,6.8,20.4,6.8c3.5,0,5-0.9,5-2.5v-0.2c0-1.7-1.8-2.6-8.1-3.8
-                c-13.1-2.7-24.6-6.4-24.6-18.7v-0.2c0-11.1,8.7-19.6,24.7-19.6c11.2,0,19.6,2.7,26.3,8l-9.5,13.1c-5.5-4-12.1-5.7-17.5-5.7
-                c-2.9,0-4.2,1-4.2,2.4v0.2c0,1.6,1.6,2.6,7.7,3.7c14.9,2.7,24.9,7.1,24.9,18.8v0.2c0,12.2-10.1,19.7-25.7,19.7
-                C115.1,62.7,104.5,59.3,97.1,52.8z"/>
-              <path class="st0" d="M162.6,32.6v-0.2c0-16.9,13.9-30.4,31.9-30.4c18,0,31.7,13.3,31.7,30.2v0.2c0,16.9-13.9,30.4-31.9,30.4
-                C176.4,62.8,162.6,49.5,162.6,32.6z M206.6,32.6v-0.2c0-6.9-4.7-13.1-12.2-13.1c-7.4,0-12.1,6.2-12.1,13v0.2
-                c0,6.9,4.7,13.1,12.2,13.1C201.9,45.6,206.6,39.4,206.6,32.6z"/>
-              <path class="st0" d="M238.3,3.3h18.2L277.3,29V3.3h19.3v58.3h-17.3l-21.6-26.9v26.9h-19.3V3.3z"/></g>
-          </svg>   
+    <div class="section about-me flex align-center">
+       <div class="wrapper-container flex align-center justify-center">
+        <div class="rayfinn-logo-wrapper">
+          <svg version="1.1" id="rayfinn-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 300 61" style="enable-background:new 0 0 300 61;" xml:space="preserve">
+          <g>
+            <path class="st0" d="M30.6,55.3L19,39.1h-0.1v16.3H6.6V5h15.9C27.8,5,33.6,5.1,38,8.6c4.1,3.3,6.2,8.5,6.2,13.7
+              c0,7.8-4.6,14.6-12.5,15.8l13.7,17.1H30.6z M23.6,16.3h-4.7v14h4.6c4.8,0,8.4-2,8.4-7.2C31.8,18.1,28,16.3,23.6,16.3z"/>
+            <path class="st0" d="M83.4,55.3L80.9,48H63.5l-2.7,7.3H47L67.2,5h10.1l20,50.3H83.4z M72.4,20.6L72.4,20.6h-0.2L67,37.8h10.5
+              L72.4,20.6z"/>
+            <path class="st0" d="M121,37v18.3h-12.9V37l-15-32h13.9l7.5,20.2L122.1,5h13.8L121,37z"/>
+            <path class="st0" d="M153.4,16.3v8.6H168v11.3h-14.6v19.2h-12.3V5h27.5v11.3H153.4z"/>
+            <path class="st0" d="M175.5,55.3V5h12.9v50.3H175.5z"/>
+            <path class="st0" d="M228.7,55.3l-19.2-30.6l-0.1,0.1l0.3,30.5h-12.3V5h11.1L228,36.6l0.1-0.1L227.6,5h12.3v50.3H228.7z"/>
+            <path class="st0" d="M280.3,55.3l-19.2-30.6l-0.1,0.1l0.3,30.5H249V5h11.1l19.4,31.6l0.1-0.1L279.2,5h12.3v50.3H280.3z"/>
+          </g>
+        </svg>
         </div>
-      <!-- ########## -->
+        <h1>Wellington based digital designer and front end developer</h1>
+        <ul class="skills space-between">
+          <li class="skill-item">design</li>
+          <li class="skill-item">prototyping</li>
+          <li class="skill-item">UX/UI</li>
+          <li class="skills-item">Interactive</li>
+        </ul> 
+        <div class="about-footer-text">
+          <h4>click above to view my portfolio</h4>
+        </div>
+      </div>     
       </div>
-    </div> <!-- end of abouts page -->    
+    </div> <!-- .section .about-me  -->  
 
     <div class="section ux">
 
       <div class="horizontal ux-slide-01 flex justify-center is-row">
-        <div class="wrapper-container flex justify-center align-center is-row">
-
-        <div class="p-symbol-container">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 220 260" style="enable-background:new 0 0 220 260;" xml:space="preserve">
-            <g>
-              <path d="M5,4.7h106.6c15.6,0,29.9,2,42.6,5.9c12.8,3.9,23.7,9.6,32.7,17.1c9,7.5,15.9,16.6,20.8,27.5c4.9,10.9,7.3,23.2,7.3,37v0.7
-                c0,14.7-2.7,27.6-8,38.7c-5.3,11.1-12.7,20.5-22.2,28.1c-9.5,7.6-20.8,13.3-33.9,17.1c-13.1,3.8-27.4,5.7-42.8,5.7H73.9v71.1H5V4.7
-                z M106.6,128.3c12.3,0,22-2.9,29-8.8c7-5.8,10.5-13.8,10.5-23.8v-0.7c0-10.7-3.5-18.9-10.5-24.5c-7-5.6-16.8-8.4-29.3-8.4H73.9
-                v66.1H106.6z"/>
-            </g>
-            </svg>
-          </div>
+        <div class="flex justify-center align-center is-row">
            <section>
             <h3 class="ux-prototype">prototyping + design</h3>
             <p class="quote-text ux-prototype">“Even the darkest moments in our history can get got”
@@ -193,7 +187,6 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.5/TweenMax.min.js"></script>
-  <!-- <script src="cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script> -->
   <script src="js/vendor/fullpage.fadingEffect.min.js"></script>
   <script src="js/vendor/fullpage.scrollHorizontally.min.js"></script>
   <script src="js/vendor/scrolloverflow.js"></script>
