mobile for UX page slide 2 / larger screens

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
             <img src="img/onBoard-large.png">
           </div>
           <article class="ux-slide02-text">
-            <h1>CASE STUDY / Birdy</h1>
-            <p>While User Experience is a conglomeration of tasks focused on optimization of a product for effective and enjoyable use; User Interface Design is its compliment, the look and feel, the presentation and interactivity of a product. But like UX.</p>
+            <h1>Case study / Birdy</h1>
+            <p>Birdy allows bird enthusist and scientist to locate and catelog native birds in New Zealand. This was a concept presented to MPI as part of there young leadership inovation programs.</p>
           </article> 
         </div>
       </div> <!-- horizontal ux-slide-01 -->
